--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,39 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cs.hanyang.stu.lee</groupId>
+	<groupId>com.github.iam20</groupId>
 	<artifactId>weather-api-wrapper</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
 
+	<name>weather api wrapper</name>
+	<description>Weather api (of kma) wrapper</description>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>https://opensource.org/licenses/Apache-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>yd.lee</name>
+			<email>game9777@naver.com</email>
+		</developer>
+	</developers>
+
+	<scm>
+		<url>https://github.com/IAM20/weather-api-wrapper</url>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>weather-api-wrapper</id>
+			<url>https://api.bintray.com/maven/iam20/utils/weather-api-wrapper/;publish=1</url>
+		</repository>
+	</distributionManagement>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -18,6 +47,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<bintray.repo>iam20/utils</bintray.repo>
+		<bintray.package>weather-api-wrapper</bintray.package>
 	</properties>
 
 	<repositories>
@@ -112,39 +143,38 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<compilerId>groovy-eclipse-compiler</compilerId>
-					<encoding>UTF-8</encoding>
-					<fork>true</fork>
-					<maxmem>512m</maxmem>
-					<compilerArguments>
-						<javaAgentClass>lombok.launch.Agent</javaAgentClass>
-					</compilerArguments>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.groovy</groupId>
-						<artifactId>groovy-eclipse-compiler</artifactId>
-						<version>3.0.0-01</version>
-					</dependency>
-					<dependency>
-						<groupId>org.codehaus.groovy</groupId>
-						<artifactId>groovy-eclipse-batch</artifactId>
-						<version>2.5.5-01</version>
-					</dependency>
-					<dependency>
-						<groupId>org.projectlombok</groupId>
-						<artifactId>lombok</artifactId>
-						<version>1.18.4</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.3</version>
 				<executions>
 					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
 						<goals>
-							<goal>repackage</goal>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
 						</goals>
 					</execution>
 				</executions>
